--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,8 @@ jobs:
     - stage: "Build Lab 3."
       name: "Run Djungo Server and test it accessibility. Fail to run and test"
       python: 3.7
+      before_install:
+        - chmod +x ./scripts/travis-build.sh
       install:
         - cd ./lab3/
         - pipenv install
