--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ jobs:
       name: "Run Djungo Server and test it accessibility. Fail to run and test"
       python: 3.7
       before_install:
-        - chmod +x ./scripts/travis-build.sh
+        - chmod +x scripts/travis-build.sh
       install:
         - cd ./lab3/
         - pipenv install
