--- a/.travis.yml
+++ b/.travis.yml
@@ -27,12 +27,11 @@ jobs:
       services:
         - docker
       install:
-        - cd ./lab5/
-        - make app
-        - make tests
+        - make -f lab5/Makefile app
+        - make -f lab5/Makefile tests
       script:
-        - make run
-        - make test-app
+        - make -f lab5/Makefile run
+        - make -f lab5/Makefile test-app
 branches:
   only:
     - master
