--- a/lab5/Dockerfile.tests
+++ b/lab5/Dockerfile.tests
@@ -8,9 +8,9 @@ RUN apk update \
 
 WORKDIR /test
 
-COPY lab5/test/requirements.txt ./
+COPY test/requirements.txt ./
 RUN pipenv install -r requirements.txt
 
-COPY lab5/test/ ./
+COPY test/ ./
 
 ENTRYPOINT pipenv run pytest test_app.py --url http://app:5000
