fix lab_5 for travis|fix v4

--- a/.travis.yml
+++ b/.travis.yml
@@ -27,7 +27,7 @@ jobs:
       services:
         - docker
       install:
-        - cd ./
+        - cd ./lab5
         - make app
         - make tests
       script:
