--- a/lab5/Dockerfile.tests
+++ b/lab5/Dockerfile.tests
@@ -1,6 +1,9 @@
 FROM python:3.7-alpine
 LABEL author="Prometej"
 
+RUN apk update \
+    && apk upgrade \
+    && pip install pipenv
 
 WORKDIR /test
 
